--- a/src/app/pages/cave/cave.component.html
+++ b/src/app/pages/cave/cave.component.html
@@ -56,7 +56,7 @@
       }
 
       @if (candado) {
-        <img class="candado-imagen" src="/img/candado.png" alt="">
+        <img class="candado-imagen" [src]="candadoImagen" alt="">
 
         <div class="password">
           <div class="password-inputs">
