--- a/src/app/pages/shiva/shiva.component.css
+++ b/src/app/pages/shiva/shiva.component.css
@@ -11,7 +11,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('/img/misteryBackground3.png') no-repeat center center;
+  background-repeat: no-repeat;
+  background-position: center center;
   background-size: cover;
   z-index: 10;
 }
@@ -123,18 +124,25 @@ p {
   color: #333; /* Color del texto del mensaje */
 }
 
-/* Posiciones específicas para los primeros tres diálogos */
-.dialogue-1 {
-  top: 20%;
-  left: 10%;
+.pregonero {
+  z-index: 11;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: auto;
+  height: auto;
+  max-height: 70vh;
+  max-width: 70vw; /* Ajuste para evitar que sea más ancho que el 50% del viewport */
 }
 
-.dialogue-2 {
-  top: 50%;
-  left: 50%;
+.contact {
+  width: 75vw; /* 80% del ancho de la pantalla */
+  max-width: 600px; /* Ajuste para evitar que sea más ancho que el 50% del viewport */
+  height: auto; /* Altura automática */
+  position: fixed;
+  top: 50%; /* Centrado verticalmente */
+  left: 50%; /* Centrado horizontalmente */
+  transform: translate(-50%, -50%) rotate(-30deg); /* Centrado y rotación de 30 grados */
+  z-index: 100; /* Asegura que la imagen esté por encima de otros elementos si es necesario */
 }
 
-.dialogue-3 {
-  top: 80%;
-  left: 80%;
-}
