--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,13 +16,15 @@
       मुझे यह खबर सुनाते हुए गर्व हो रहा है कि जादुई समापन के लिए मंत्र समाप्त हो गया है।
       इसे समझना लगभग असंभव है क्योंकि इसे खोजने के लिए जटिल भाषाई अस्पष्टता की आवश्यकता होती है।
     </p>
-    <p class="pista">_ | _ _ _ _</p>
-    <p class="pista">_ | _ _ _</p>
-    <p class="pista">_ | _ _ _</p>
-    <p class="pista">_ | _ _ _ _ _</p>
-    <p class="pista">_ | _ _ _ _ _</p>
-    <p class="pista">_ | _ _ _ _ _</p>
-    <p class="pista">_ | _ _ _ _ _ _ _</p><br>
+    <p class="pista"><span class="underline red">_</span> | _ _ _ _</p>
+    <p class="pista"><span class="underline red">_</span> | _ _ _</p>
+    <p class="pista"><span class="underline red">_</span> | _ _ _</p>
+    <p class="pista">
+      <u class="underline red">U</u> | <u>N</u>&nbsp;<u>I</u>&nbsp;<u>V</u>&nbsp;<u>E</u>&nbsp;<u>R</u>&nbsp;<u>S</u>&nbsp;<u>I</u>&nbsp;<u>D</u>&nbsp;<u>A</u>&nbsp;<u>D</u>
+    </p>
+    <p class="pista"><span class="underline red">_</span> | _ _ _ _ _</p>
+    <p class="pista"><span class="underline red">_</span> | _ _ _ _ _</p>
+    <p class="pista"><span class="underline red">_</span> | _ _ _ _ _ _ _</p><br>
     <p>
       मैं इस नोट को एक अनुस्मारक के रूप में छोड़ता हूं कि यह कैसे काम करता है, मैं बस आशा करता हूं कि यह खो न जाए।
     </p>
