[19/10/2024] arreglando bug pregonero y colocando boton saltar en cueva

--- a/src/app/pages/cave/cave.component.html
+++ b/src/app/pages/cave/cave.component.html
@@ -17,6 +17,7 @@
   <div class="background-image">
     @if (startText) {
       <!-- Bocadillo de diálogo para los primeros tres -->
+      <div class="exit-text" (click)="exitPage()">Saltar</div>
       <div
         *ngIf="startDialogueIndex < 3 && getCurrentDialogue()"
         class="dialogue"
