--- a/src/app/pages/cave/cave.component.css
+++ b/src/app/pages/cave/cave.component.css
@@ -318,3 +318,14 @@ p {
   animation-iteration-count: 6;
 }
 
+.exit-text {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  color: red; /* Letras rojas */
+  font-size: 1.5em; /* Tamaño del texto */
+  font-weight: bold; /* Texto en negrita */
+  z-index: 100; /* Asegura que esté por encima de todo */
+  cursor: pointer; /* Cambia el cursor al pasar sobre el texto */
+}
+
